Fixes tests.